[package]
name = "madsim-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
madsim = { git = "https://github.com/madsys-dev/madsim", rev = "42e81fa", features=["sim"]}
futures = "0.3"
log = "0.4"
env_logger = "0.9"
serde = {version = "1.0", features = ["derive"] }